--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 ---
-title: Boostrap Index
+title: EXHIBINECTION
 layout: ./app/layout.ejs
 engine: ejs
 current: index
@@ -11,8 +11,10 @@ current: index
             <div class="text text-light">
               <h2 class="fs-2 mb-2">台北當代藝術展</h2>
               <p class="fs-5 fw-bold mb-4">01 JUN - 31 OCT</p>
-              <div class="btn btn-primary-light me-1 mb-2 mb-sm-0">購買票券</div>
-              <div class="btn btn-outline-light mb-2 mb-sm-0">詳細資訊</div>
+              <a href="detail.html"
+                 class="btn btn-primary-light me-1 mb-2 mb-sm-0">購買票券</a>
+              <a href="design.html"
+                 class="btn btn-outline-light mb-2 mb-sm-0">詳細資訊</a>
             </div>
         </div>
     </div>
@@ -30,7 +32,7 @@ current: index
                 </a>
               </li>
               <li class="c-navbar__item">
-                <a class="c-navbar__link" href="#">
+                <a class="c-navbar__link" href="design.html">
                   設計
                 </a>
               </li>
@@ -87,8 +89,10 @@ current: index
                       </div>
                       <p class="mb-2 fs-5">$350</p>
                       <p class="w-lg-75 mb-5 mb-sm-8 fs-6 fs-md-5">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
-                      <div class="btn btn-sm btn-primary me-1 mb-6 mb-sm-0">購買票券</div>
-                      <div class="btn btn-sm btn-outline-primary mb-6 mb-sm-0">收藏展覽</div>
+                      <a href="detail.html" 
+                         class="btn btn-sm btn-primary me-1 mb-6 mb-sm-0">購買票券</a>
+                      <a href="#" 
+                         class="btn btn-sm btn-outline-primary mb-6 mb-sm-0">收藏展覽</a>
                   </div>
                   <p class="d-none fs-5 fw-bold w-10 d-lg-flex flex-column"> 
                       01 JUN | <br> 31 OCT
@@ -114,8 +118,8 @@ current: index
                   <p class="mb-2 fs-5">$350</p>
                   <p class="w-lg-75 mb-5 mb-sm-8 fs-6 fs-md-5">
                   這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>
-                  <div class="btn btn-sm btn-primary me-1 mb-6 mb-sm-0">購買票券</div>
-                  <div class="btn btn-sm btn-outline-primary mb-6 mb-sm-0">收藏展覽</div>
+                  <a href="#" class="btn btn-sm btn-primary me-1 mb-6 mb-sm-0">購買票券</a>
+                  <a href="#" class="btn btn-sm btn-outline-primary mb-6 mb-sm-0">收藏展覽</a>
                 </div>
                 <p class="d-none fs-5 fw-bold w-10 d-lg-flex flex-column">
                   01 JUN | <br> 31 OCT
@@ -141,8 +145,8 @@ current: index
                   <p class="mb-2 fs-5">$350</p>
                   <p class="w-lg-75 mb-5 mb-sm-8 fs-6 fs-md-5">
                     設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
-                  <div class="btn btn-sm btn-primary me-1 mb-6 mb-sm-0">購買票券</div>
-                  <div class="btn btn-sm btn-outline-primary mb-6 mb-sm-0">收藏展覽</div>
+                  <a href="#" class="btn btn-sm btn-primary me-1 mb-6 mb-sm-0">購買票券</a>
+                  <a href="#" class="btn btn-sm btn-outline-primary mb-6 mb-sm-0">收藏展覽</a>
                 </div>
                 <p class="d-none fs-5 fw-bold w-10 d-lg-flex flex-column">
                   01 JUN | <br> 31 OCT
@@ -171,21 +175,4 @@ current: index
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+
