add aos animation

--- a/app/design.html
+++ b/app/design.html
@@ -57,9 +57,9 @@ current: design
             </ul>
         </div>
     </nav>
-    <div class="bg-primary text-light pt-11 pb-11  pt-lg-lg pb-lg-13">
+    <div class="bg-primary text-light pt-11 pb-11 pt-lg-lg pb-lg-13">
         <div class="container">
-            <div class="row">
+            <div class="row" data-aos="zoom-in">
                 <div class="col-lg-5 mb-4 order-lg-2">
                     <img class="w-100 img-cover"
                          src="assets/images/ex-img-3.jpg" alt="ex-img-3">
@@ -78,7 +78,7 @@ current: design
         </div>
     </div>
     <div class="text-primary pt-11 pb-11 pt-lg-lg pb-lg-13">
-        <div class="container">
+        <div class="container" data-aos="zoom-in">
             <div class="row justify-content-end">
                 <div class="col-lg-5 mb-4 order-lg-2">
                     <img class="w-100 img-cover"
@@ -98,7 +98,7 @@ current: design
         </div>
     </div>
     <div class="bg-primary text-light pt-11 pb-11 pt-lg-lg pb-lg-13">
-        <div class="container">
+        <div class="container" data-aos="zoom-in">
             <div class="row">
                 <div class="col-lg-5 mb-4 order-lg-2">
                     <img class="w-100 img-cover"
