--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,8 @@ current: index
     <div class="container">
        <h2 class="mb-6 fs-2">熱門特展</h2>
        <ul class="mb-6 mb-md-12 mb-lg-15">
-          <li class="row g-0 mx-ngw mx-sm-0 mb-4 mb-md-5 bg-gray-100 ">
+          <li class="row g-0 mx-ngw mx-sm-0 mb-4 mb-md-5 bg-gray-100 "
+              data-aos="fade-up">
               <div class="col-md-4 pt-6 pt-sm-0 px-gw px-sm-0 mb-2 mb-sm-0">
                 <img class="img-cover h-100"
                       src="assets/images/ex-img-3.jpg" alt="ex-image-1">
@@ -101,7 +102,7 @@ current: index
                 </div>
               </div>
           </li>
-          <li class="row g-0 mx-ngw mx-sm-0 mb-4 mb-md-5 bg-gray-100">
+          <li class="row g-0 mx-ngw mx-sm-0 mb-4 mb-md-5 bg-gray-100" data-aos="fade-up">
             <div class="col-md-4 pt-6 pt-sm-0 px-gw px-sm-0 mb-2 mb-sm-0">
               <img class="img-cover h-100" src="assets/images/ex-img-1.jpg" alt="ex-image-2">
             </div>
@@ -128,7 +129,7 @@ current: index
               </div>
             </div>
           </li>
-          <li class="row g-0 mx-ngw mx-sm-0 mb-4 mb-md-5 bg-gray-100">
+          <li class="row g-0 mx-ngw mx-sm-0 mb-4 mb-md-5 bg-gray-100" data-aos="fade-up">
             <div class="col-md-4 pt-6 pt-sm-0 px-gw px-sm-0 mb-2 mb-sm-0">
               <img class="img-cover h-100" src="assets/images/ex-img-2.jpg" alt="ex-image-2">
             </div>
@@ -157,7 +158,7 @@ current: index
           </li>
        </ul>
        <h2 class="mb-6 fs-2">直播回顧</h2>
-       <div class="stream bg-cover text-light mb-6 mb-md-15">
+       <div class="stream bg-cover text-light mb-6 mb-md-15" data-aos="fade-up">
           <div class="px-5 pt-10 pb-9 bg-gray-300 w-md-50 w-lg-40 h-100">
               <div class="d-flex mb-8">
                   <h3 class="pe-3 me-3 border-end border-light">開幕對談</h3>
